# fallout-terminal

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  config.json  draw.py  show-files.ps1
include/: application.h  audio_manager.h  constants.hpp  file_system_navigator.h  menu_builder.h  terminal_ui.h
resources/: LICENSE.txt
scripts/: arch_install.cmake  vaulttec.pkgbuild.in
src/: application.cpp  audio_manager.cpp  file_system_navigator.cpp  main.cpp  menu_builder.cpp  terminal_ui.cpp  verifier.hpp
